updated with semantic html tags, social media links, footer, images, and style

--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,8 @@
       </div>
     </nav>
 
-    <div class="row m-5 justify-content-around">
-      <div class="col-sm-6" style="background-color: white">
+    <section class="row m-5 justify-content-around">
+      <article class="col-sm-6" style="background-color: white">
         <h3>Contact</h3>
         <form>
           <div class="form-group">
@@ -82,9 +82,12 @@
           <button type="submit" class="btn btn-primary">Submit</button>
           <p></p> <!--  the only way i could add space after the button -->
         </form>
-      </div>
-    </div>
+      </article>
+    </section>
   </body>
   
-  
+  <footer class="footer">
+    <div class="footer-copyright text-center py-3">Created by Raffay Ahmed using Bootstrap
+    </div>
+  </footer>
 </html>
