--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       </div>
     </nav>
 
-    <div class="row m-5 justify-content-md-center">
-      <div class="col-md-6 col-off-set-3 pb-5 rounded" style="background-color: white;">
-        <h3>About Me</h3>
+    <section class="row m-5 justify-content-md-center">
+      <article class="col-md-6 col-off-set-3 pb-5 rounded" style="background-color: white;">
+        <h3 class="page-header">About Me</h3>
         <img
           src="imgs/profile-pic.jpg"
           class="img-fluid rounded"
@@ -79,8 +79,17 @@
           friends and watch movies. Currently I am also teaching myself Python
           and C++ to help build my coding background.
         </p>
-      </div>
-    </div>
-
+        <p>
+          <a href="https://www.linkedin.com/in/raffay-ahmed-13a609156/">LinkedIn</a>
+          <br>
+          <a href="https://github.com/rahme">GitHub</a>
+        </p>
+      </article>
+    </section>
   </body>
+
+  <footer class="footer">
+    <div class="footer-copyright text-center py-3">Created by Raffay Ahmed using Bootstrap
+    </div>
+  </footer>
 </html>
