--- a/portfolio.html
+++ b/portfolio.html
@@ -57,13 +57,13 @@
       </div>
     </nav>
 
-    <div class="container mycon rounded">
-      <h3>Projects</h3>
-      <div class="row myrow justify-content-around">
-        <div class="col-sm-3 mycol rounded">
+    <section class="container mycon rounded">
+      <h3>Portfolio</h3>
+      <article class="row myrow justify-content-around">
+        <summary class="col-sm-3 mycol rounded">
           <h5>Rock Paper Scissors!</h5>
           <img
-            class="img-fluid"
+            class="img-fluid projectlink overlay"
             src="imgs/rps.png"
             alt="rock paper scissors"
             style="width: 60%; display: block; margin: 0 auto; margin-bottom: 10px; border: 1px solid #000000;"
@@ -74,13 +74,13 @@
             10 rounds. Once 10 rounds has been reached, the game will display
             the winner.
           </p>
-        </div>
-        <div class="col-sm-3 mycol rounded">
+        </summary>
+        <summary class="col-sm-3 mycol rounded">
           <h5>3D Mapping Using Drones</h5>
           <img
             class="img-fluid"
             src="imgs/drone.jpg"
-            alt="rock paper scissors"
+            alt="rc drone"
             style="width: 90%; display: block; margin: 0 auto; margin-bottom: 10px; border: 1px solid #000000;"
           />
           <p>
@@ -89,13 +89,13 @@
             3D representation of the surfaces. Project has scope for military,
             firefighters, constructions, etc.
           </p>
-        </div>
-        <div class="col-sm-3 mycol rounded">
+        </summary>
+        <summary class="col-sm-3 mycol rounded">
           <h5>Tragectory Calculator</h5>
           <img
             class="img-fluid"
             src="imgs/jet.jpg"
-            alt="rock paper scissors"
+            alt="f-16"
             style="width: 70%; display: block; margin: 0 auto; margin-bottom: 10px; border: 1px solid #000000;"
           />
           <p>
@@ -103,40 +103,40 @@
             sensors collected data of the object's flight path and calculate the
             trajectory of the object to point of impact.
           </p>
-        </div>
-      </div>
-      <div class="row myrow justify-content-around">
-        <div class="col-sm-3 mycol rounded">
+        </summary>
+      </article>
+      <article class="row myrow justify-content-around">
+        <summary class="col-sm-3 mycol rounded">
           <h5>Habits</h5>
           <img
             class="img-fluid"
-            src="imgs/habit.webp"
-            alt="rock paper scissors"
+            src="imgs/habits.jpg"
+            alt="habits"
             style="width: 80%; display: block; margin: 0 auto; margin-bottom: 10px; border: 1px solid #000000;"
           />
           <p>
             Created an application to track a user's habits, with reminders for them to keep up with them.
             Allows the user to store the habits in the cloud and sync between any devices that have the same application.
           </p>
-        </div>
-        <div class="col-sm-3 mycol rounded">
+        </summary>
+        <summary class="col-sm-3 mycol rounded">
           <h5>Dice</h5>
           <img
             class="img-fluid"
             src="imgs/dice.jpg"
-            alt="rock paper scissors"
+            alt="dice"
             style="width: 60%; display: block; margin: 0 auto; margin-bottom: 10px; border: 1px solid #000000;"
           />
           <p>
             Created a random number generator between the limits the user defines. Created to make sure no one forgets their dice for DnD.
           </p>
-        </div>
-        <div class="col-sm-3 mycol rounded">
+        </summary>
+        <summary class="col-sm-3 mycol rounded">
           <h5>Coding Portfolio</h5>
           <img
             class=""
-            src="imgs/website.webp"
-            alt="rock paper scissors"
+            src="imgs/website.jpg"
+            alt="creating a wesbite"
             style="width: 80%; display: block; margin: 0 auto; margin-bottom: 10px; border: 1px solid #000000;"
           />
           <p>
@@ -145,8 +145,13 @@
             webiste, while noSQL was used as a server to store contact forms
             from the contact page.
           </p>
-        </div>
-      </div>
-    </div>
+        </summary>
+      </article>
+    </section>
   </body>
+
+  <footer class="footer">
+    <div class="footer-copyright text-center py-3">Created by Raffay Ahmed using Bootstrap
+    </div>
+  </footer>
 </html>
