--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#"><b>Raffay Ahmed</b></a>
+      <a class="navbar-brand" href="index.html"><b>Raffay Ahmed</b></a>
       <button
         class="navbar-toggler"
         type="button"
