--- a/index.html
+++ b/index.html
@@ -92,21 +92,45 @@
           <p style="font-size: 40px; margin-top: 5px; margin-bottom: 5px;"><strong>Projects</strong></p>
         </div>
         <div class="card" style="width: 18rem; margin: auto; margin-top: 20px; margin-bottom: 15px;">
+          <img class="card-img-top" style="width: 288px; height: 228px;" src="Assests/images/spot-a-show.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Spot-A-Show</h5>
+            <p class="card-text">A web-application to look up an artist, their top songs, and upcoming event dates.</p>
+            <a href="https://github.com/rahme/Spot-A-Show" target="_blank" class="btn btn-dark">Github Repository</a>
+            <a href="https://damp-eyrie-26652.herokuapp.com/" target="_blank" class="btn btn-dark">Web Application</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem; margin: auto; margin-top: 20px; margin-bottom: 15px;">
+          <div class="card-body">
+            <h5 class="card-title">Read Me Generator</h5>
+            <p class="card-text">A command line interface application that uses Node.js to help create ReadMe files for repositories.</p>
+            <a href="https://github.com/rahme/read-me-generator" target="_blank" class="btn btn-dark">Github Repository</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem; margin: auto; margin-top: 20px; margin-bottom: 15px;">
+          <img class="card-img-top" style="width: 288px; height: 228px;" src="https://raw.githubusercontent.com/rahme/team-profile-generator/master/Team%20Profile%20Generator/screenshot/team-maker.PNG" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Team Profile Generator</h5>
+            <p class="card-text">A Node.js application that uses CLI to take user input to create a HTML file for team profiles.</p>
+            <a href="https://github.com/rahme/team-profile-generator" target="_blank" class="btn btn-dark">Github Repository</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem; margin: auto; margin-top: 20px; margin-bottom: 15px;">
+          <img class="card-img-top" style="width: 288px; height: 228px;" src="https://github.com/rahme/note-taker/raw/master/images/saved-note.PNG?raw=true" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Note Taker</h5>
+            <p class="card-text">A web-application that uses Node.js and Express to create a notebook for the user to save and delete notes.</p>
+            <a href="https://github.com/rahme/note-taker" target="_blank" class="btn btn-dark">Github Repository</a>
+            <a href="https://note-taker-ra.herokuapp.com/" target="_blank" class="btn btn-dark">Web Application</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem; margin: auto; margin-top: 20px; margin-bottom: 15px;">
           <img class="card-img-top" src="Assests/images/password-gen.PNG" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Password Generator</h5>
             <p class="card-text">A generator that creates a secure password for using the symbols criteria the user inputs.</p>
             <a href="https://github.com/rahme/password-generator" target="_blank" class="btn btn-dark">Github Repository</a>
             <a href="https://rahme.github.io/password-generator/" target="_blank" class="btn btn-dark">Web Application</a>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem; margin: auto; margin-top: 20px; margin-bottom: 15px;">
-          <img class="card-img-top" style="width: 288px; height: 228px;" src="Assests/images/spot-a-show.png" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Spot-A-Show</h5>
-            <p class="card-text">A web-application to look up an artist, their top songs, and upcoming event dates.</p>
-            <a href="https://github.com/rahme/Spot-A-Show" target="_blank" class="btn btn-dark">Github Repository</a>
-            <a href="https://rahme.github.io/Spot-A-Show/" target="_blank" class="btn btn-dark">Web Application</a>
           </div>
         </div>
         <div class="card" style="width: 18rem; margin: auto; margin-top: 20px; margin-bottom: 15px;">
